# vibeEmu

./: .gitignore  AGENTS.md  Cargo.toml  MBC_TODO.md  Notes-GBC-Bootstrap-Rom.html  PPU_TODO.md  README.md  TODO.md
.github/workflows/: ci.yml  rust.yml
dmg_sound_extracted/dmg_sound/source/: 01-registers.s  02-len ctr.s  03-trigger.s  04-sweep.s  05-sweep details.s  06-overflow on trigger.s  07-len sweep period sync.s  08-len ctr during power.s  09-wave read while on.s  10-wave trigger while on.s  11-regs after power.s  12-wave write while on.s  readme.txt
gbc-emulator/: README.md
roms/: cpu_instrs.gb  pokered.sav  pokesilver.sav  polishedcrystal-3.2.0.sav
roms/blargg/cgb_sound/: cgb_sound.sav
roms/blargg/dmg_sound/: dmg_sound.sav
roms/mooneye-test-suite-wilbertpol/acceptance/: add_sp_e_timing.gb  boot_hwio-G.gb  call_cc_timing.gb  call_cc_timing2.gb  call_timing.gb  call_timing2.gb  di_timing-GS.gb  div_timing.gb  ei_timing.gb  halt_ime0_ei.gb  halt_ime0_nointr_timing.gb  halt_ime1_timing.gb  halt_ime1_timing2-GS.gb  if_ie_registers.gb  intr_timing.gb  jp_cc_timing.gb  jp_timing.gb  (+12 more)
src/: apu.rs  audio.rs  bus.rs  bus_tests.rs  cartridge.rs  cpu.rs  display.rs  gameboy.rs  input.rs  interrupts.rs  joypad.rs  lib.rs  main.rs  mbc.rs  memory.rs  mmu.rs  models.rs  ppu.rs  ppu_tests.rs  serial.rs  timer.rs
src/apu/: channel1.rs  channel2.rs  channel3.rs  channel4.rs  mod.rs  tests.rs
tests/: apu.rs  cartridge.rs  cgb_acid2_rom.rs  cpu.rs  cpu_instrs_rom.rs  dmg_acid2_rom.rs  halt_bug_rom.rs  instr_timing_rom.rs  mem_timing_rom.rs  mmu.rs  ppu.rs  timer.rs
(+42 files in other folders)
