[package]
name = "VibeEmu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
minifb = "0.25"
log = "0.4"
env_logger = "0.10"
egui = "0.27.0"
eframe = { version = "0.27.0", default-features = false, features = ["glow", "accesskit"] }
winit = "0.29.4" # Compatible with eframe 0.27.2
crossbeam-channel = "0.5"
native-dialog = "0.7.0"
